# cppasy

./: .gitignore  CMakeLists.txt  README.md  _formulas.tex  annotated.html  argument__parser_8cpp.html  argument__parser_8hpp.html  argument__parser_8hpp_source.html  build_2CMakeFiles_23_820_85_2CompilerIdC_2CMakeCCompilerId_8c.html  build_2src_2CMakeFiles_2cppasy_8dir_2argument__parser_8cpp_8o_8d.html  build_2src_2CMakeFiles_2cppasy_8dir_2main_8cpp_8o_8d.html  build_2src_2CMakeFiles_2cppasy_8dir_2orthotope_8cpp_8o_8d.html  classcppasy__app-members.html  classcppasy__app.html  classes.html  classmain__frame.html  classno__input__file.html  classorthotope-members.html  classorthotope.html  classpolytope-members.html  classpolytope.html  classsynthesis-members.html  classsynthesis.html  cppasy__app_8cpp.html  cppasy__app_8hpp.html  debug_2CMakeFiles_23_820_85_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  debug_2CMakeFiles_23_820_85_2CompilerIdC_2CMakeCCompilerId_8c.html  debug_2src_2CMakeFiles_2cppasy_8dir_2main_8cpp_8o_8d.html  dir_03de8c6b3393f2c44a4e173589af68d9.html  dir_06de3f839818d6bde8e81bc1578e993e.html  dir_3d2e4578fe4cc3b7fa6177047437af5b.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_701344d99a520edc46b3f16735b55bde.html  dir_888203035aa52ecdf2bda18c416fc88a.html  dir_cc867a5f87ee14db356f6d04ba9b922b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f8877dbbb4ad928ae94086f3775ea835.html  dir_ff56dcb6235ef742535e80ba2af0f1af.html  files.html  functions.html  (+33 more)
cli_input/01/: boundaries.txt
cli_input/02_invalid_formula/: formula.smt2
cli_input/03_too_many_boundaries/: boundaries.txt  formula.smt2
cli_input/04_boundary_missing/: boundaries.txt
cli_input/05_ambigous_boundaries/: boundaries.txt
cli_input/06_not_an_interval/: boundaries.txt
cli_input/07_not_a_number/: boundaries.txt
cli_input/08_boundary_missing/: boundaries.txt
cli_input/09_no_splits_needed/: formula.smt2
doc/: Doxyfile
doc/html/: README_8md.html  annotated.html  argument__parser_8cpp.html  argument__parser_8hpp.html  argument__parser_8hpp_source.html  build_2CMakeFiles_23_820_85_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  build_2src_2CMakeFiles_2cppasy_8dir_2parameter__synthesis_8cpp_8o_8d.html  build_2src_2CMakeFiles_2cppasy_8dir_2polytope_8cpp_8o_8d.html  classes.html  classhelp.html  classmain__frame-members.html  classno__input__file-members.html  classno__input__file.html  classorthotope-members.html  classorthotope.html  classpolytope-members.html  classpolytope.html  classsynthesis-members.html  classsynthesis.html  cli_8cpp.html  cppasy__app_8hpp_source.html  debug_2src_2CMakeFiles_2cppasy_8dir_2argument__parser_8cpp_8o_8d.html  debug_2src_2CMakeFiles_2cppasy_8dir_2orthotope_8cpp_8o_8d.html  debug_2src_2CMakeFiles_2cppasy_8dir_2parameter__synthesis_8cpp_8o_8d.html  debug_2src_2CMakeFiles_2cppasy_8dir_2polytope_8cpp_8o_8d.html  dir_4759d2f9f627d6afcfc41fd50fd37848.html  dir_48c1f94cd2ae07e13fa9a9f16a1d541c.html  dir_4e7c8c4fc0d923782da8a23d70a9725b.html  dir_538bab0bb948af46ff66622b9322cf69.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+43 more)
include/: argument_parser.hpp  global.hpp  orthotope.hpp  parameter_synthesis.hpp  polytope.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  defines_0.js  defines_1.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+28 more)
src/: CMakeLists.txt  argument_parser.cpp  main.cpp  orthotope.cpp  parameter_synthesis.cpp  polytope.cpp  polytope_sample.cpp  polytope_split.cpp
src/cli/: CMakeLists.txt  argument_parser.cpp  cli.cpp
src/evaluation/: evaluation.cpp
src/gui/: CMakeLists.txt  cppasy_app.cpp  gui.cpp  main_frame.cpp  plot_frame.cpp  preferences_dialog.cpp  preferences_frame.cpp  variables_dialog.cpp  variables_frame.cpp
src/logic/: orthotope.cpp  parameter_synthesis.cpp  polytope.cpp
src/parse/: parse_boundaries.cpp  smtlib_parse.cpp
(+142 files in other folders)
